--- a/about.html
+++ b/about.html
@@ -58,22 +58,23 @@
         <p>If you've been keeping up with the news, clearly, the answer is NO: No the new bridge did not and DOES NOT need a new name. The history of the Tappan Indians and the Dutch founders of our state is immeasurably more important to preserve than the accomplishments of any politician, Republican, Democrat, or Independent.</p>
         <p>What started as one signature on a Change.org petition, has grown into a state-wide movement.</p>
         <p>After reaching over 100,000 signatures and seeing the media frenzy that occurred as a result of citizens across the state (and outside of the state) speaking up, petition starter Monroe decided to take the grassroots movement and turn it into a formal, organized, and powerful advocacy organization to ensure the fight does not end without all avenues of success pursued.</p>
-        <p>Andrew Cuomo: We put you on notice.  We are mobilizing.  We are raising our war chest.  We, the citizens, will not stop fighting until we win.</p>
-        <p>WE WANT OUR BRIDGE BACK.</p> 
-        <p>We are Save Our Tappan Zee, Inc., a New York not-for-profit, preparing now to submit our 501(c)(3) tax exempt paperwork to the IRS. Get ready.  The voice of the people is about to be unleashed en masse.</p> 
+        <p>Andrew Cuomo and his minions in the media then began a first-class smear campaign against Monroe Mann, the SOTZ organization, and every proud New Yorker, proud American, and history lover who signed the petition.</p>  
+        <p>Andrew Cuomo: We put you on notice.  We are mobilizing.  We, the citizens, will not stop fighting until we win.</p>
+        <p>WE WANT OUR BRIDGE BACK.  And no amount of smear from your office will dissuade us from your mission.</p> 
+        <p>We are Save Our Tappan Zee, Inc., a New York not-for-profit, and a 501(c)(3) IRS tax exempt organization.  Get ready.  The voice of the people has been unleashed en masse.</p> 
 
       </div>
       <div class="col-md-6 col-xs-12">
         <h2>Introduction</h2>
         <p>Greetings!</p>
-        <p>My name is Dr. Monroe Mann, PhD, Esq, MBA.  I'm a resident of Westchester County, New York, and (to avoid confusion) son of the late Port Chester attorney of the same name. You can google my name to learn more about me. For those who don't know, I'm the guy who started the petition to return the traditional Indian/Dutch Tappan Zee name to our new bridge. Rationale: History Matters.</p>
-        <p>And the cause is growing.  But Albany doesn't appear to be listening as clearly as we had hoped: Albany is still trying to belittle our effort as a right-wing political charade that has little bipartisan support.  The truth--as we all know--is that the Tappan Zee name means a lot to all New Yorkers: Republican, Democrat, Independent, and apolitical citizens as well.</p>  
+        <p>My name is Dr. Monroe Mann, PhD, Esq, MBA.  I'm a resident of Westchester County, New York, and (to avoid confusion) son of the late Port Chester attorney of the same name. You can google my name to learn more about me. For those who don't know, I'm the guy who started the petition to return the traditional Indian/Dutch Tappan Zee name to our new bridge. Rationale: History Matters.  And most of what the Journal News wrote about me is completely fabricated, in case you stumble upon that hit job.</p>
+        <p>Nonetheless, the smear campaign failed, and the cause is still growing.  But Albany still doesn't appear to be listening as clearly as we had hoped: Albany is still trying to belittle our effort as a right-wing political charade that has little bipartisan support.  The truth--as we all know--is that the Tappan Zee name means a lot to all New Yorkers: Republican, Democrat, Independent, and apolitical citizens as well.</p>  
         <p>The arguments that Albany & its supporters make in defense of the renaming do not stand up:</p>
         <p>1. "New Bridge, New Name".  Negative.  London Bridge in England was destroyed four times, and four times, it was rebuilt, and yet the traditional historical name always remained.  A new name is not acceptable simply because the bridge was rebuilt.  Here, history matters.</p>
         <p>2. "There is a long tradition of renaming public structures after politicians".  Well, the tradition is wrong, corrupt, and a waste of tax-payer money.  With all due respect, the history of the Tappan Indians and the Dutch is far longer (and more important) than this terrible tradition of renaming public structures after politicians.</p>
         <p>3. "Mario Cuomo had a profoundly positive effect on New York State."  That very well may be true, but as an apolitical organization, we won't be getting into that issue.  That is precisely the point: it doesn't matter how much of an impact he had on our state, his name does not deserve to push aside the ever greater & historical Tappan Zee name.  In fact, after I read a recent biography of Mario Cuomo, I have to say, I have a lot of respect for him.  I honestly think he would support our side of this controversy.</p> 
 
-        <p>It is for these reasons that I started the fundraising drive: to take our cause to the next level in the form of a not-for-profit.  This organization will help us better organize and execute this fight, and will allow me to spend more of my time over this next year leading and organizing the effort.</p>
+        <p>It is for these reasons that I started this organization: to take our cause to the next level in the form of a not-for-profit.  This organization will help us better organize and execute this fight.</p>
   </div>
 </div>
 
@@ -103,7 +104,7 @@
 <div class="row">
   <div class="col-xs-12 text-center">
     <h2>Get in touch:</h2>
-      <p>MAIN EMAIL: SOTZ.ContactUs@gmail.com</p>
+      <p>MAIN EMAIL: saveourtappanzee@gmail.com</p>
       ***
       <p>Executive Director</p>
       <p>Dr. Monroe Mann, PhD, Esq, MBA, ME</p>
