--- a/helpout.html
+++ b/helpout.html
@@ -58,20 +58,20 @@
     <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, use the tools below to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!  Most importantly, we need more people to sign our petition!</h4>
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">
+        <a href="images/SOTZ-flyer-2021.pdf" download="SOTZ-flyer-2021.pdf">
           <h2>Printable Flyer</h2>
         </a>
         (FREE)
         <p>Want to help?  Download this, print it out in bulk, and pass them out in your city.  You can legally do so on public sidewalks, and in public areas.  You can also email them to others, asking them to print it out and distribute as well.  This flyer explains what happened to the bridge, and what citizens can do to help the cause.</p>
-        <a href="images/SOTZ-flyer.pdf" download="SOTZ-flyer.pdf">Download the SOTZ Flyer</a>
+        <a href="images/SOTZ-flyer-2021.pdf" download="SOTZ-flyer-2021.pdf">Download the SOTZ Flyer</a>
       </div>
       <div class="col-xs-12 col-md-6">
-        <a href="images/SOTZ-letter.pdf" download="SOTZ-letter.pdf">
+        <a href="images/SOTZ-letter-2021.pdf" download="SOTZ-letter-2021.pdf">
           <h2>Printable Letter To Your Representative</h2>
         </a>
         (FREE)
         <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a> If you want to copy the text of the letter to paste into an email, scroll down!</p>
-        <a href="images/SOTZ-letter2.pdf" download="SOTZ-letter2.pdf">Download the SOTZ Letter</a>     
+        <a href="images/SOTZ-letter-2021.pdf" download="SOTZ-letter-2021.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
 <!--     <div class="row">
@@ -113,9 +113,9 @@
 
     <p>Dear _________________,</p>
   
-    <p>I am writing to you in support of NY State Senate Bill S7671 & NY State Assembly Bill A8914, both of which would rename the current Governor Mario M. Cuomo Bridge to the far more appropriate Governor Mario M. Cuomo Tappan Zee Bridge, and save us countless tax dollars by avoiding the replacement of all the signs.</p>
+    <p>I am writing to you in support a bill that would rename the current Governor Mario M. Cuomo Bridge to the far more appropriate Governor Mario M. Cuomo Tappan Zee Bridge, and save us countless tax dollars by avoiding the replacement of all the signs.</p>
 
-    <p>I am one of the over 115,000 people who signed the petition on Change.org and I believe that the Tappan Zee name needs to remain a part of the new bridge, and if you don’t support this beautiful compromise, then YOU are the one being partisan.  Here are some more reasons why you should support it:</p>
+    <p>I am one of the over 157,000 people who signed the petition on Change.org and I believe that the Tappan Zee name needs to remain a part of the new bridge, and if you don’t support this beautiful compromise, then YOU are the one being partisan.  Here are some reasons why you should support it:</p>
 
     <p>1.  History matters.  The bridge was originally named for the founders of New York: the Tappan Indians of the Lenape Nation and the Dutch settlers (Zee means ‘sea’ in Dutch).  Did you know that the official seal of New York City depicts a Dutch trader and a Lenape Indian? The history of that bridge name is so important.</p>
 
@@ -125,7 +125,7 @@
 
     <p>4.  Additional Reasons: (optional):</p>
 
-    <p>Senate Bill S761 and Assembly Bill A8914 are an opportunity for you to right an obvious wrong.  This bill represents an opportunity to honor Mario Cuomo without destroying 70 years of local history and over 350 years of NY history.  It’s a fair compromise that I am asking you to please get behind: either by publicly supporting and/or simply voting for it.</p>
+    <p>This is an opportunity for you to right an obvious wrong.  It's an opportunity to preserve 70 years of local history and over 350 years of NY history.</p>
 
     <p>I kindly expect a response to this letter informing me of what action(s) you intend to take to help us save our Tappan Zee Bridge.</p>
 
