--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="text-center">
           <h4>Our not-for-profit apolitical mission is to return the Tappan Zee Bridge its original name, and to preserve the history of the Tappan Indians (Tappan) and Dutch Settlers (Zee is Dutch for 'sea') who inspired the name.  The original name of the span crossing the Hudson River between Westchester and Rockland counties <em>must</em> return.</h4>
 
-          <p style="text-align: left">We have over 115,000 signatures, and growing!  Please help us continue to remind people worldwide of the true name of the bridge; help us keep our corrupt, cowardly, and craven legislators and senators on notice that they work for US; and help us win back <em>this</em> bridge, the Triboro Bridge, the Holland Tunnel, the Queensboro Bridge, <strong>and every other stolen landmark</strong>.</p>
+          <p style="text-align: left">We have over 157,000 signatures, and our numbers are still growing!  Please help us continue to remind people worldwide of the true name of the bridge; help us keep our corrupt, cowardly, and craven legislators and senators on notice that they work for US; and help us win back this bridge, and while we're at it, the Triboro Bridge, the Holland Tunnel, the Queensboro Bridge, <strong>and every other stolen landmark</strong>.</p>
           <p>However long it takes, we will not give up the fight.</p>
 
 <!--           <h4>Days Left For YOU To <a href="helpout.html">Help Save The Bridge!</a></h4>
@@ -116,26 +116,26 @@
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">115,000 Supporters since 11/3/17<br>
+          <p style="color: red">157,000+ Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
       </div>
       <div class="col-md-6 col-xs-12">
-        <h3 class="text-center">Please Sign Our Petition:</h3>
-        <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
-        <p class="text-center main-links">2. <a href="helpout.html">Download &amp; Fight!</a>
+        <h3 class="text-center">Please Help Us Out:</h3>
+        <p class="main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
+        <span>We're almost at 200,000 signatures.  Please help us get there, and beyond.  Every time this petition reaches a new milestone, we get renewed interest and media coverage.</span>
+        <p class="main-links">2. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Help Promote The Petition With Even $5</a></p>
+         <span>Instead of donating to our Save Our Tappan Zee organization, we instead ask that you apply your money directly on change.org towards the promotion of this particular petition.  Be sure you're giving the money to our petition, and not to change.org in general.</span>
         <!-- <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a> -->
         <!-- <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a> -->        
-        <p class="text-center main-links">5. <a href="donate.html">Donate!</a>
-        <p class="text-center main-links">6. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
-        <p class="text-center main-links">7. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
-        <p class="text-center main-links">8. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
+        <p class="main-links">3. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
+        <span>We occasionally send out important news via this email list.  We will never share or sell your email address, and you can unsubscribe at any time.
       </div>
     </div>
     <br>
     <div>
-     <p>What started as a single signature by a citizen watching tv has turned into a petition with over 115,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
+     <p>What started as a single signature by a citizen watching tv has turned into a petition with over 157,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
      <p>Save Our Tappan Zee, Inc. is a NY 501(c)(3) not-for-profit corporation.</p>
     </div>
   </div>
