--- a/media.html
+++ b/media.html
@@ -56,9 +56,12 @@
       <div class="col-md-4 col-xs-12">
         <h4>Latest News</h4>
         <ul>
+
+          <li><strong>As of 2019, we no longer share updated articles here on the website.</strong>  However, news coverage continues, even now into 2021.  Just search for the articles on the internet!</li><br>
+
           <li><i>If you'd like to interview someone from the company, please send an email to saveourtappanzee@gmail.com or call Executive Director Monroe Mann at 808-482-4136</i></li><br>
 
-          <li><strong>6/1/18 </strong> We delivered the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</li>  <br>
+          <li><strong>6/7/18 </strong> We delivered the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</li>  <br>
 
           <li><strong>4/29/18 </strong> Thanks to our efforts, there is currently a senate bill AND an assembly bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  YOU MUST SHOW YOUR SUPPORT!  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  <b>OUR ELECTED REPS HAVE UNTIL JUNE 20th TO MAKE IT HAPPEN THROUGH A VOTE!</b> <a href="helpout.html">Please help us get it passed!</a></li><br>
         
