--- a/donate.html
+++ b/donate.html
@@ -53,8 +53,13 @@
   <div class="well">   
     <div class="row">
       <div class="col-md-4 col-xs-12">
-        <h3 class="text-center">What your donation is used for:</h3>
-        <ul>
+        <h3 class="text-center">Would you like to help fund the fight?</h3>
+        <p>Instead of sending money directly to our organization, we find that you can more effectively help by applying those funds directly towards promoting our petition on change.org</p>
+        <p>So, pull out your debit/credit card, and please <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">visit our petition</a> on Change.org and click the 'promote this petition' option. </p> 
+        <p>It's a simply process and you can help out with as little as a few dollars.  Each time it's promoted, more and more people will see our petition on the change.org website.</p>
+        <p>Thank you for your help!</p>
+        <p>NOTE: we received none of this money.  It all goes to change.org</p>
+        <!-- <ul>
           <li>To pay for bumper stickers, signs, and t-shirts</li>
           <li>To pay for other state-wide advertising</li>
           <li>To keep the website updated and improving</li>
@@ -83,7 +88,7 @@
         <p class="main-links">4. Send us a check. <--No Processing Fees</a></p>
         <p class="text-center">Checks made out to:<br>Save Our Tappan Zee, Inc.<br>12 Puritan Dr.<br>Port Chester, NY 10573.</p>
         
-      </div>
+      </div> -->
     </div> 
   </div>
 
