--- a/terms.html
+++ b/terms.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="col-md-6 col-xs-12">
         <h2>Terms & Privacy</h2>
-        <p>Terms of use & Privacy policy coming here soon.</p>
+        <p>We do not sell or share any of your data.  We do not use cookies or other tracking software.</p>
       </div>
       <div class="col-md-6 col-xs-12">
         
