--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <br>
     <div>
      <p>What started as a single signature by a citizen watching tv has turned into a petition with over 157,000 signatures, news coverage around the country, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
-     <p>Save Our Tappan Zee, Inc. is a NY 501(c)(3) not-for-profit corporation.</p>
+     <p>Save Our Tappan Zee, Inc. is a NY 501(c)(3) not-for-profit corporation.  Thank you for your support.</p>
     </div>
   </div>
 
