Fixed https issue

--- a/helpout.html
+++ b/helpout.html
@@ -53,7 +53,7 @@
       <h2>Join the Fight!</h2>
   <div class="well">     
 
-   <!--  <h4>6/1/18 - Please <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</h4>  
+   <!--  <h4>6/1/18 - Please <a href="https://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">sign up</a> to help us deliver the 5,000 pages of petition signatures to Governor Cuomo on Thursday, June 7th, at 12 noon.</h4>  
  -->
     <h4>We need everyone and anyone to write to as many state senators and representatives as possible, starting with your local ones!  First, use the tools below to find your representatives).  Second, help get more people to our website so they too can help by downloading flyers, buying action cards, and more!  Most importantly, we need more people to sign our petition!</h4>
     <div class="row">
@@ -70,13 +70,13 @@
           <h2>Printable Letter To Your Representative</h2>
         </a>
         (FREE)
-        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="http://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a> If you want to copy the text of the letter to paste into an email, scroll down!</p>
+        <p>Want to help?  Download this, print it out, fill it out, sign it, and then send it to as many <a href="https://nyassembly.gov/mem/" target="_blank">NY legislators</a> as you can.  You can also email it to others, asking them to print it out, sign it, and send it in as well.  This letter explains what happened to the bridge, and why it's so important that the current bill in the senate passes.  Here are all of their <a href="https://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a> If you want to copy the text of the letter to paste into an email, scroll down!</p>
         <a href="images/SOTZ-letter-2021.pdf" download="SOTZ-letter-2021.pdf">Download the SOTZ Letter</a>     
       </div>
     </div> 
 <!--     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">
+        <a href="https://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">
           <h2>Come protest with us!</h2>
         </a>
         (FREE)
@@ -135,7 +135,7 @@
     <p>Signature &amp; Date</p>
 
     <h2>Looking for where to send these letters?</h2>
-    <p>Here are all of NY's elected representatives <a href="http://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
+    <p>Here are all of NY's elected representatives <a href="https://nyassembly.gov/mem/" target="_blank">names, addresses, phones, and emails.</a></p>
     <p>1. CALL THEM.  2. EMAIL THEM.  3. WRITE TO THEM!</p>
  
   </div>
