--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <li><a href="contact.html">Contact us</a></li>
         <li><a href="events.html">Events</a></li>
         <li>
-          <a href="http://www.gofundme.com/savethetappanzee" target="_blank">Donate</a>
+          <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate</a>
         </li>
       </ul>
     </div>
