--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <p class="main-links">2. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Help Promote The Petition With Even $5</a></p>
          <span>Instead of donating to our Save Our Tappan Zee organization, we instead ask that you apply your money directly on change.org towards the promotion of this particular petition.  Be sure you're giving the money to our petition, and not to change.org in general.</span>
         <!-- <p class="text-center main-links">3. <a href="store.html">Buy &amp; Distribute Cards!</a> -->
-        <!-- <p class="text-center main-links">4. <a href="http://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a> -->        
-        <p class="main-links">3. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
+        <!-- <p class="text-center main-links">4. <a href="https://events.eventzilla.net/e/help-us-deliver-the-petition-to-governor-cuomo-2138958392" target="_blank">Join a Protest!</a> -->        
+        <p class="main-links">3. <a href="https://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
         <span>We occasionally send out important news via this email list.  We will never share or sell your email address, and you can unsubscribe at any time.
       </div>
     </div>
